# vtk-mirror

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build-ubuntu-20.04.yml
CMake/: CTestCustom.cmake.in  FindPythonLibs.cmake  VTKConfig.cmake.in  vtkBackends.cmake  vtkBuildPath.cmake  vtkCompilerExtras.cmake  vtkLegacyData.cmake  vtkModule.cmake  vtkModuleJson.cmake  vtkModuleMacros.cmake  vtkModuleTesting.cmake  vtkModuleTop.cmake  vtkModuleWrapJava.cmake  vtkModuleWrapPython.cmake  vtkOpenGL.cmake  vtkPythonWrapping.cmake  vtkTestingMacros.cmake  vtkWrapPython.cmake
Charts/Core/: vtkAxis.cxx  vtkChartXY.cxx  vtkChartXY.h  vtkPlotParallelCoordinates.h  vtkPlotPoints.h
Common/ComputationalGeometry/: vtkParametricFunction.h  vtkParametricRandomHills.h  vtkParametricSpline.h
Common/Core/: CMakeLists.txt  vtkAoSDataArrayTemplate.h  vtkDataArray.cxx  vtkDataArray.h  vtkDataArrayTemplate.h  vtkDataArrayTemplate.txx  vtkFileOutputWindow.h  vtkGenericDataArray.h  vtkGenericDataArrayHelper.cxx  vtkGenericDataArrayMacros.h  vtkLookupTable.h  vtkMath.cxx  vtkMath.h  vtkOutputWindow.cxx  vtkOutputWindow.h  vtkScalarsToColors.h  vtkSetGet.h  vtkSystemIncludes.h  vtkWin32OutputWindow.cxx  vtkWindow.h
Common/DataModel/: CMakeLists.txt  vtkAbstractCellLocator.h  vtkBezierInterpolation.cxx  vtkBoundingBox.cxx  vtkBoundingBox.h  vtkCellArray.cxx  vtkCellArray.h  vtkCellData.cxx  vtkCellData.h  vtkCellLinks.cxx  vtkCellLocator.cxx  vtkCellTypes.cxx  vtkCellTypes.h  vtkCompositeDataIterator.h  vtkCylindricalGrid.cxx  vtkCylindricalGrid.h  vtkCylindricalGridBuilder.cxx  vtkDataAssembly.cxx  vtkDataAssembly.h  vtkDataAssemblyVisitor.h  vtkDataObject.cxx  vtkDataObject.h  vtkDataObjectTreeIterator.h  vtkDataObjectTypes.cxx  vtkDataProperties.cxx  vtkDataProperties.h  vtkDataSet.cxx  vtkDataSet.h  vtkDataSetAttributes.cxx  vtkDataSetAttributes.h  vtkDataSetAttributesFieldList.cxx  vtkGenericInterpolatedVelocityField.h  vtkHyperTree.cxx  vtkHyperTree.h  vtkHyperTreeCursor.h  (+32 more)
Examples/: CMakeLists.txt
Examples/ImageProcessing/Cxx/: CMakeLists.txt  SMPBenchMarking.sh.in  SMPBenchMarkingRunAllTests.sh.in  SMPThreadedImageAlgorithm.cxx  TestSMPThreadedImageAlgorithm.cxx  UnitTest.h  vtkExtentTranslatorUnitTest.cxx
Filters/Modeling/Testing/: CMakeLists.txt
Filters/Modeling/Testing/Cxx/: CMakeLists.txt  TestCookieCutter.cxx  UnitTestHausdorffDistancePointSetFilter.cxx
Filters/Modeling/Testing/Python/: CMakeLists.txt  TestImprintFilter.py  TestImprintFilter2.py
Remote/: RenderingLookingGlass.remote.cmake  vtkDICOM.remote.cmake
Utilities/: vtkindent.py
zz_scripts/: build-clean-os-ubuntu-20.04.sh  define-disable-modules-variable.sh
(+1083 files in other folders)
